refactor(request): change LocalDateTime fields to LocalDate in requests